Update Hudup lib.